# boreas

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  sdkconfig.boreas
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
components/zdevice/: CMakeLists.txt  Kconfig  README.md
components/zdevice/include/: amp_api.h  button_input_api.h  device_model.h  gpio_dt.h  led_api.h
components/zdevice/include/boreas/: device_model.h  gpio_dt.h  i2c_dt.h  led_api.h  spi_dt.h  uart_dt.h
components/zdevice/src/: device_model.c  gpio_dt.c  i2c_dt.c  spi_dt.c  uart_dt.c
components/zkernel/: CMakeLists.txt  Kconfig  README.md  zkernel.lf
components/zkernel/include/boreas/zephyr/: fatal.h  init.h  kernel.h  toolchain.h
components/zkernel/include/boreas/zephyr/sys/: __assert.h  atomic.h  byteorder.h  dlist.h  ring_buffer.h  slist.h  time_units.h  util.h
components/zkernel/include/zephyr/: init.h  kernel.h
components/zkernel/include/zephyr/sys/: dlist.h  slist.h  time_units.h  util.h
components/zkernel/src/: fatal.c  k_event.c  k_mem_slab.c  k_msgq.c  k_mutex.c  k_sem.c  k_thread.c  k_timer.c  k_timer_linux.c  k_work.c  ring_buf.c  sys_init.c  zkernel_internal.h
components/zshell/: CMakeLists.txt  Kconfig  README.md  zshell.lf
components/zshell/include/boreas/zshell/: shell.h  shell_types.h
components/zshell/include/zshell/: shell.h  shell_types.h
components/zshell/src/: shell.c  shell_builtins.c  shell_builtins_device.c  shell_builtins_zsys.c  shell_cmd_reg.c  shell_completion.c  shell_history.c  shell_parse.c  shell_print.c  shell_stdio.c  shell_uart.c  shell_vt100.c
components/zsys/: CMakeLists.txt  Kconfig  README.md  zsys.lf
components/zsys/include/boreas/zsys/: log.h  log_backend.h  retry.h  watchdog.h
components/zsys/include/zsys/: log.h  log_backend.h  retry.h  thread_analyzer.h  watchdog.h
components/zsys/src/: log.c  log_backend_esp.c  retry.c  thread_analyzer.c  watchdog.c
docs/: linker-section-registration.md
examples/blink_device_model/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/blink_device_model/main/: CMakeLists.txt  main.c
examples/log_demo/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/log_demo/main/: CMakeLists.txt  main.c
examples/shell_demo/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/shell_demo/main/: CMakeLists.txt  main.c
examples/uart_loopback/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/uart_loopback/main/: main.c
examples/uart_rs485_echo/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/uart_rs485_echo/main/: CMakeLists.txt  main.c
examples/work_queue_demo/: CMakeLists.txt  README.md
examples/work_queue_demo/main/: CMakeLists.txt  main.c
test/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.qemu
test/main/: CMakeLists.txt  test_atomic.c  test_byteorder.c  test_device_registry.c  test_dlist.c  test_gpio_flags.c  test_init.c  test_k_event.c  test_k_event_mt.c  test_k_mem_slab.c  test_k_msgq.c  test_k_msgq_mt.c  test_k_mutex.c  test_k_mutex_pi.c  test_k_sem.c  test_k_thread.c  test_k_timer.c  test_k_work.c  test_log.c  test_main.c  test_retry.c  test_ring_buf.c  test_shell.c  test_sleep.c  test_slist.c  test_timeout.c  test_uptime.c
test/scripts/: qemu_test.sh
tools/: check_iram_symbols.sh
tools/hooks/: pre-commit
